# rust-uefi-kernel

./: .gitignore  Cargo.toml  LICENSE
kernel/: Cargo.toml
kernel-efi/: Cargo.toml
kernel-efi/src/: lib.rs
kernel/.cargo/: config.toml
kernel/src/: fb.rs  lock.rs  main.rs  rust_lang.rs  x86_64.rs
kernel/src/rust_lang/: stubs.rs
kernel/src/uefi_rs/: gop.rs  mod.rs
kernel/src/x86_64/: rust_lang.rs  statics.rs
kernel/src/x86_64/rust_lang/: kpmalloc.rs  kvalloc.rs
log-impl/: Cargo.toml
log-impl/src/: lib.rs
normal/: Cargo.toml
normal/src/: main.rs
uefi-bin/: Cargo.toml  x86_64-custom.json
uefi-bin/.cargo/: config.toml
uefi-bin/src/: efi.rs  main.rs  rust_lang.rs  x64.rs
uefi-bin/src/efi/: fs.rs  gop.rs  mem.rs
uefi-bin/src/efi/fs/: elf.rs
uefi-bin/src/efi/tables/: rsdp.rs
uefi-bin/src/rust_lang/: stubs.rs
uefi-bin/src/x64/: cpuid.rs  paging.rs
uefi-bin/src/x64/paging/: page_structs.rs  traits.rs
uefi-bin/src/x64/paging/page_structs/: mem.rs  table.rs
x64/: Cargo.toml
x64/src/: cpuid.rs  gdt.rs  lib.rs  paging.rs  palloc.rs
x64/src/gdt/: tss.rs
x64/src/paging/: page_structs.rs  ptgetter.rs  traits.rs
x64/src/paging/page_structs/: entry.rs  mem.rs  table.rs
