[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x64 = {path="../x64", optional=true}
x86_64 = {version="0.14",features=[], optional=true}
kernel-efi = {path="../kernel-efi"}

[features]
default=["core_intrinsics","x64"]
core_intrinsics=[]
x64=["x86_64","x64/alloc"]