[package]
name = "efi"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
uefi = { version = "0.20", features = ["logger","alloc","global_allocator"] }
uefi-services = "0.17"
elf_rs = "0.3.0"

x86_64 = {version="0.14.9",features=["inline_asm"]}
lazy_static = {version="1.4.0",features=["spin_no_std"]}
log = "0.4.16"
#log-impl = {path="../log-impl"}
x64 = {path="../x64",features=["alloc"]}
kernel-efi={path="../kernel-efi"}